--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
       </head>
   <body>
     <h1>Discover the hidden places in the world around you</h1>
-    <div id="link">
+    <div class="link">
       <a class="link" href="">Download Excursion (Coming soon!)<a/>
     </div>
-  </body>
+    <div class="video">
+      <embed src="C:\Users\Mr.Yeung\Documents\HY\Coding\Website\Projects\Excursion\resources\videos\excursion.mp4" autostart="true" wideth="404" height="720"/>
+    </div>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img class="images" src="C:\Users\Mr.Yeung\Documents\HY\Coding\Website\Projects\Excursion\resources\images\camp.jpg" />
+    <p><img class="images" src="C:\Users\Mr.Yeung\Documents\HY\Coding\Website\Projects\Excursion\resources\images\phone.png" /></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a class="link" href="">Download Excursion (Coming soon!)<a/>
+    <p class="last">&copy Excursion<p>
+    </body>
 </html>
