--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link href="C:\Users\Mr.Yeung\Documents\HY\Coding\Website\Projects\Excursion\resources\css\style.css" type="text/css" rel="stylesheet">
+    <link href=".\resources\css\style.css" type="text/css" rel="stylesheet">
       </head>
   <body>
     <h1>Discover the hidden places in the world around you</h1>
@@ -15,8 +15,8 @@
     </div>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <img class="images" src="C:\Users\Mr.Yeung\Documents\HY\Coding\Website\Projects\Excursion\resources\images\camp.jpg" />
-    <p><img class="images" src="C:\Users\Mr.Yeung\Documents\HY\Coding\Website\Projects\Excursion\resources\images\phone.png" /></p>
+    <img class="images" src=".\resources\images\camp.jpg" />
+    <p><img class="images" src=".\resources\images\phone.png" /></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <a class="link" href="">Download Excursion (Coming soon!)<a/>
     <p class="last">&copy Excursion<p>
