added revised file re video

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a class="link" href="">Download Excursion (Coming soon!)<a/>
     </div>
     <div class="video">
-      <embed src="C:\Users\Mr.Yeung\Documents\HY\Coding\Website\Projects\Excursion\resources\videos\excursion.mp4" autostart="true" wideth="404" height="720"/>
+      <embed src=".\resources\videos\excursion.mp4" autostart="true" wideth="404" height="720"/>
     </div>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
